<resources>
    <string name="app_name">Vehicle buying and selling app</string>
    <string name="textView">Kingdom of Vehicles</string>
    <string name="Text2">Skip</string>
    <string name="Txt">UserName</string>
    <string name="Txt1">Password</string>
    <string name="Txt2">Forgot Username and Password</string>
    <string name="Txt3">Raja980109</string>
    <string name="Txt4">rj8*1@#$l9</string>
    <string name="Txt5">Username</string>
    <string name="Txt6">Password</string>
    <string name="Txt7">Email</string>
    <string name="Txt8">Name</string>
    <string name="Txt9">Phone no</string>
    <string name="btn">Login</string>
    <string name="btn1">Register</string>
    <string name="btn2">Register</string>
    <string name="txt1">View Vehicles and Parts</string>
    <string name="editText8">Someone@gmail.com</string>
    <string name="textView12">Email</string>
    <string name="button3">Send</string>
    <string name="textView2">Re enter password</string>
    <string name="textusname">Dilsh1998</string>
    <string name="txtpass">nawnc980310</string>
    <string name="txtmail">Dilshika1998@gmail.com</string>
    <string name="txtName">Dilshika Netthikumarage</string>
    <string name="txtPhone">0717699439</string>
    <string name="btnSell">Add Vehicle and Add Parts</string>
    <string name="txtuserprof">User Profile</string>
    <string name="btnupdate">Update</string>
    <string name="btnDel">Delete</string>
    <string name="btnView">View</string>
    <string name="txtusername">UserName</string>
    <string name="txtpassword">Password</string>
    <string name="txtemail">Email</string>
    <string name="txtname">Name</string>
    <string name="txtphone">Phone</string>
    <string name="btnforward">Forward</string>
    <string name="textwarn">Unauthorized User!</string>
    <string name="txthint">Search here</string>
    <string name="txtmsg">Authorized Person?</string>
    <string name="txtbool1">Yes</string>
    <string name="txtbool2">No</string>
    <string name="btntext">Update</string>
    <string name="btntext1">Delete</string>
    <string name="btndelete">Delete SellerName</string>


</resources>
